--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,11 +37,11 @@ jobs:
       run: |
         echo "${{ secrets.AETHA_VM_PRIVATE_KEY }}" > aetha_vm_key.pem
         chmod 600 aetha_vm_key.pem
-        ssh -o StrictHostKeyChecking=no -i aetha_vm_key.pem aetha_admin@40.117.74.134 "rm -rf ~/aetha_project/*"
+        ssh -o StrictHostKeyChecking=no -i aetha_vm_key.pem aetha_admin@40.117.74.134 "rm -rf ~/aetha-backend/*"
 
-    - name: Ensure target directory exists
-      run: |
-        ssh -o StrictHostKeyChecking=no -i aetha_vm_key.pem aetha_admin@40.117.74.134 "mkdir -p ~/aetha_project"
+    # - name: Ensure target directory exists
+    #   run: |
+    #     ssh -o StrictHostKeyChecking=no -i aetha_vm_key.pem aetha_admin@40.117.74.134 "mkdir -p ~/aetha-backend"
 
     - name: Clone repository on VM
       run: |
@@ -50,7 +50,7 @@ jobs:
     - name: Build and run application on VM
       run: |
         ssh -o StrictHostKeyChecking=no -i aetha_vm_key.pem aetha_admin@40.117.74.134 << 'EOF'
-          cd ~/aetha_project
+          cd ~/aetha-backend
           ./mvnw clean package
           nohup java -jar target/aetha_backend-0.0.1-SNAPSHOT.jar > app.log 2>&1 &
         EOF
