--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,7 +12,7 @@ permissions:
   id-token: write
 
 jobs:
-  build-backend:
+  build:
 
     runs-on: ubuntu-latest
 
@@ -39,13 +39,15 @@ jobs:
         chmod 600 aetha_vm_key.pem
         ssh -o StrictHostKeyChecking=no -i aetha_vm_key.pem aetha_admin@40.117.74.134 "rm -rf ~/aetha-backend/*"
 
-    # - name: Ensure target directory exists
-    #   run: |
-    #     ssh -o StrictHostKeyChecking=no -i aetha_vm_key.pem aetha_admin@40.117.74.134 "mkdir -p ~/aetha-backend"
+    - name: Ensure target directory exists
+      run: |
+        ssh -o StrictHostKeyChecking=no -i aetha_vm_key.pem aetha_admin@40.117.74.134 "mkdir -p ~/aetha-backend"
 
     - name: Clone repository on VM
+      env:
+        GH_PAT: ${{ secrets.GH_PAT }}
       run: |
-        ssh -o StrictHostKeyChecking=no -i aetha_vm_key.pem aetha_admin@40.117.74.134 "git clone https://github.com/Project-AETHA/aetha-backend.git ~/aetha-backend"
+        ssh -o StrictHostKeyChecking=no -i aetha_vm_key.pem aetha_admin@40.117.74.134 "git clone https://${AETHA_BACKEND_PAT}@github.com/Project-AETHA/aetha-backend.git ~/aetha-backend"
 
     - name: Build and run application on VM
       run: |
