--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,7 @@ spring:
       enabled: true
       max-file-size: 10MB
       max-request-size: 10MB
+
+env:
+  uploads:
+    secret_key: "nVDjQCU0qiMFuyCa8lWMKKun4q5hciGjhkZrfezu5TI="
