--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,7 +44,7 @@ jobs:
       run: |
         ssh -o StrictHostKeyChecking=no -i aetha_vm_key.pem aetha_admin@40.117.74.134 << 'EOF'
           cd ~/aetha-backend
-          mvn clean package
+          mvn clean package -DskipTests
           sudo chmod +rw target/aetha_backend-0.0.1-SNAPSHOT.jar
           nohup java -jar target/aetha_backend-0.0.1-SNAPSHOT.jar > app.log 2>&1 &
         EOF
