--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,13 @@
             <artifactId>spring-boot-starter-oauth2-client</artifactId>
         </dependency>
 
+        <!-- Stripe Payment Gateway Dependency -->
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>28.0.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
